<resources>
    <string name="app_name">Showcase</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Nicolas Rochette</string>
    <string name="nav_header_subtitle" translatable="false">nicolas.rochette@etu.unice.fr</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>

    <!-- Fragment Home -->
    <string name="btn_menu">Menu</string>
    <string name="btn_quit">Quitter</string>
    <string name="dialog_title">Quitter l\'application ?</string>
    <string name="dialog_message">Êtes vous sûr de vouloir quitter l\'application ?</string>
    <string name="dialog_cancel">Annuler</string>
    <string name="dialog_yes">Oui</string>
    <string name="dialog_yes_toast">Fermeture...</string>
    <string name="dialog_no">Non</string>
    <string name="dialog_no_toast">Annulation...</string>


    <!-- Activity Anko -->
    <string name="btn_anko_toast">Exemple toast</string>
    <string name="btn_anko_answer">J\'apparaît grâce à Anko !</string>
    <!-- Custom Adapter -->
    <string name="languageName">Nom :</string>
    <!-- Drawer menu -->
    <string name="menu_accueil">Accueil</string>
    <string name="menu_cardview" translatable="false">Cardview</string>
    <string name="menu_magic_circle">Cercle Magique</string>
    <string name="menu_number_picker" translatable="false">Number Picker</string>
    <string name="menu_kotlin" translatable="false">Kotlin</string>
    <string name="menu_anko" translatable="false">Anko</string>
    <string name="menu_gridview" translatable="false">GridView</string>
    <string name="menuaction_quote">Citation</string>
    <!-- Title in toolbar -->
    <string name="fragment_title_home">Accueil</string>
    <string name="title_magiccircle">Cercle magique</string>
    <!-- Dialog on back pressed -->
    <string name="backpressed_title">Fermer l\'application ?</string>
    <string name="backpressed_sentence">Etes vous sur de vouloir fermer l\'application?</string>
    <string name="backpressed_positive">Oui</string>
    <string name="backpressed_negative">Non</string>
    <string name="title_quote">Citation aléatoire</string>
    <string name="quote_author">Auteur :&#160;</string>
    <string name="quote_quote">Citation :&#160;</string>

    <string-array name="name">
        <item>CSS</item>
        <item>Java</item>
        <item>Javascript</item>
        <item>Kotlin</item>
    </string-array>
    <string-array name="src">
        <item>css3</item>
        <item>java</item>
        <item>javascript</item>
        <item>kotlin</item>
    </string-array>


</resources>
