<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_accueil" />
        <item
            android:id="@+id/nav_cardview"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_cardview" />
        <item
            android:id="@+id/nav_mc"
            android:icon="@drawable/ic_fiber_manual_record_black_24dp"
            android:title="@string/menu_magic_circle" />
        <item
            android:id="@+id/nav_numberpicker"
            android:icon="@drawable/ic_import_export_black_24dp"
            android:title="@string/menu_number_picker" />

    </group>

    <item android:title="@string/menu_kotlin">
        <menu>
            <item
                android:id="@+id/nav_anko"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_anko" />
            <item
                android:id="@+id/nav_gridview"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_gridview" />
        </menu>
    </item>

</menu>
